--- a/client/src/components/AdminDiv/style.css
+++ b/client/src/components/AdminDiv/style.css
@@ -1,6 +1,16 @@
+/* Imoprt for PureCSS Library */
+@import url("https://unpkg.com/purecss@1.0.1/build/pure-min.css");
+
 #cy {
-    width: 100%;
-    height: 90%;
+    /* width: 75%; */
+    /* height: 90%; */
     position: absolute;
     display: block;
+}
+
+.pure-button {
+    margin: 1em auto;
+    padding: 1em;
+    display: block;
+    width: 20em;
 }
