--- a/client/src/components/AdminStoryGraph/style.css
+++ b/client/src/components/AdminStoryGraph/style.css
@@ -1,6 +1,9 @@
 #cy {
-    width: 100%;
-    height: 90%;
+    width: 75%;
+    height: 100%;
+    margin: 3em;
+    overflow: clip;
+    border: 1px solid black;
+    /* display: block; */
     position: absolute;
-    display: block;
 }
