--- a/client/src/components/AdminDiv/style.css
+++ b/client/src/components/AdminDiv/style.css
@@ -2,7 +2,7 @@
 @import url("https://unpkg.com/purecss@1.0.1/build/pure-min.css");
 
 #cy {
-    width: 50%;
+    width: 100%;
     height: 100%;
     margin: 2em auto;
     /* padding: 5em 3em; */
@@ -10,6 +10,31 @@
     /* border: 1px solid black; */
     /* display: block; */
     position: absolute;
+}
+
+.dropzone {
+    position: relative;
+    border-width: 5px;
+    border-style: dashed;
+    border-radius: 5px;
+    border-color: lightgray;
+    margin: 1em;
+    padding: 1em;
+    height: 100%;
+}
+
+#drop-input {
+    position: absolute; 
+    display: table; 
+}
+
+.dropzone p {
+    /* margin-top: 25%; */
+    display: block; 
+    text-align: center;
+    color: lightgrey;
+    font-weight: bolder;
+    font-size: 1.2em;
 }
 
 .pure-button {
