--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -1,17 +1,35 @@
 .centered-form {
-    width: 50%;
+    width: 40%;
     margin: auto;
     text-align: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    border: 3px solid blue;
+    border: 3px solid rgb(101, 129, 108);
     border-radius: 4px;
-    padding: 24px;
-    background-color: gray;
+    padding: 20px;
+    background-color: #F0F8FF;
+    opacity: 0.5;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;
+    font-family: 'Cormorant SC', serif;
 }
 
 .form-input-centered {
    flex-basis: 65%;
 }
+
+.admin-font {
+    font-family: 'Cormorant SC', serif;
+    color: rgb(217, 224, 230);
+    font-size: 35px;
+    text-align: center; 
+}
+
+.bg {
+    background-image: url("https://mymodernmet.com/wp/wp-content/uploads/2017/02/metropolitan-museum-of-art-public-domain-creative-commons-met-6.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
 
